CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT("Cunnyware")

SET(CMAKE_CXX_FLAGS "-std=c++2a -ldl -lpthread -Wall -fpic -O2")
SET(CMAKE_EXPORT_COMPILE_COMMANDS ON)

FILE(GLOB SOURCES "src/*.cpp")

ADD_SUBDIRECTORY(libs/fmt)
ADD_LIBRARY(${CMAKE_PROJECT_NAME} SHARED ${SOURCES})
TARGET_LINK_LIBRARIES(${CMAKE_PROJECT_NAME} fmt)
